--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="nav1">
       <div class="navbar">
         <div class="nav_upper">
-          <h1>Clovers.</h1>
+          <h1 style="color: white;">Clovers.</h1>
         </div>
 
         <div class="nav_middel">
@@ -727,16 +727,10 @@
       <div class="lo1">
         <img src="./ph/q8.png" alt="" class="">
       </div>
-      
-
     </div>
-
   </div>
-
 </div>
 <br>
-
-
 <br>
 <br>
   </body>
