--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <i class="ri-shopping-cart-2-fill"></i>
         </div>
         <div class="menus">
-            <i class="ri-menu-line"></i>
+            <i style="color: white;" class="ri-menu-line"></i>
         </div>
 
       </div>
